

<resources>
    <string name="app_name">TwoActivities</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>

<!--for second espresso project-->
    <string name="toSpinnerActivity">To Spinner Activity</string>
    <string name="show">Show</string>
    <string name="hint_phonenumber">Enter a phone number</string>
    <string name="phonenumber_label">Phone Number:</string>
    <string name="nothing_entered">Nothing entered</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
